# mathematical-modeling

./: .gitignore  18_2020C_report.tex  19_2019A_report.tex  LICENSE  README.md  app.py  blog_mathflow_intro.md  demo_paper.tex  paper_example.tex  pyproject.toml
docs/: build.sh
docs/source/: conf.py  index.rst
examples/: 01_ahp_topsis_demo.py  02_grey_prediction_demo.py  03_optimization_demo.py  04_graph_demo.py  05_sir_epidemic.py  06_regression_anova.py  07_queuing_taxi.py  08_monte_carlo_pi.py  09_classification_demo.py  10_curve_fitting.py  11_latex_report.py  12_multi_obj_schedule.py  13_game_theory.py  14_dynamic_programming.py  15_timeseries_decompose.py  16_paper_writing.py  17_fuzzy_markov_wavelet.py  18_real_problem_2020C.py  19_engineering_2019A.py  20_prob_demo.py  21_data_demo.py  22_evaluate_full_demo.py  test_new_features.py
mathflow/: __init__.py
mathflow/core/: __init__.py  config.py  validators.py
mathflow/data/: __init__.py  cleaner.py  loader.py
mathflow/dp/: __init__.py  knapsack.py  resource_alloc.py
mathflow/evaluate/: __init__.py  ahp.py  critic.py  dea.py  entropy_weight.py  fuzzy_eval.py  gra.py  promethee.py  rsr.py  (+1 more)
tests/: test_2024c_crop_planting.py  test_core.py  test_data.py  test_dp.py  test_evaluate.py  test_fuzzy.py  test_game.py  test_graph.py  test_grey.py  test_interpolate.py  test_markov.py  test_ml.py  test_new_modules.py  test_new_p0.py  test_ode.py  test_optimize.py  test_paper.py  test_predict.py  test_prob.py  test_report.py  test_simulation.py  test_stats.py  test_timeseries.py  test_viz.py  test_wavelet.py
(+94 files in other folders)
