[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathflow"
version = "0.1.0"
description = "🧮 Python toolkit for mathematical modeling competitions — AHP, TOPSIS, Grey Prediction, Optimization, Graph Theory, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Charon0415" }]
keywords = ["mathematical-modeling", "ahp", "topsis", "grey-prediction", "optimization", "math-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.1",
    "scikit-learn>=1.3",
    "PuLP>=2.7",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]
full = ["torch>=2.0", "cvxpy>=1.4", "deap>=1.4", "pyswarms>=1.3"]
dev = ["pytest>=7.0", "ruff", "mypy"]
streamlit = ["streamlit>=1.28", "plotly>=5.18"]

[project.urls]
Homepage = "https://github.com/HyperCharon/mathematical-modeling"
Repository = "https://github.com/HyperCharon/mathematical-modeling"
Issues = "https://github.com/HyperCharon/mathematical-modeling/issues"
